<resources>
    <string name="app_name">EasyAndroid</string>
    <string name="plugin_not_init">%1$s绑定的标题栏插件没有初始化</string>
    <string name="settings">设置</string>
    <string name="about_us">关于</string>
    <string name="search">搜索</string>
    <string name="currentLocation">当前位置：</string>
    <string name="my_email">我的邮箱</string>
    <string name="about_author">关于作者</string>
    <string name="theme_manager">主题管理</string>
    <string name="more">更多</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="weatherDemo">天气模块</string>
    <string name="cameraDemo">相机模块</string>
    <string name="dbDemo">数据库模块</string>
    <string name="videoDemo">视频模块</string>
    <string name="dataBindingDemo">DataBinding</string>
    <string name="networkDemo">网络状态模块</string>
    <string name="amapDemo">高德地图模块</string>
    <string name="customerDemo">自定义View模块</string>
    <string name="trackNodeDemo">级联关闭Activity示例</string>
    <string name="init_layout_failed">initLayout返回参数不合法，请检查</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
