<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demo.main.activity.WelcomeActivity">

    <!-- 标题栏-->
    <include layout="@layout/toolbar_main" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/currentLocation"
                />

            <Button
                android:id="@+id/btnWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/weatherDemo"/>

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/cameraDemo"/>

            <Button
                android:id="@+id/btnDB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/dbDemo"/>

            <Button
                android:id="@+id/dataBinDemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textAllCaps="false"
                android:text="@string/dataBindingDemo"/>

            <Button
                android:id="@+id/btnNetWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textAllCaps="false"
                android:text="@string/networkDemo"/>


        </LinearLayout>
        <!-- 侧边菜单-->
        <include layout="@layout/drawer_main"/>
    </android.support.v4.widget.DrawerLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fbLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_location"
        app:backgroundTint="@color/colorPrimary"/>
</android.support.design.widget.CoordinatorLayout>
